# UQPCE

./: .buildinfo  .gitignore  README.md  SOBOL_PR_DESCRIPTION.md  bibliography.html  genindex.html  input.yaml  intro.html  objects.inv  pyproject.toml  release-notes.html  search.html  searchindex.js
.github/workflows/: docs_workflow.yml  tests_workflow.yml
docs/theory/: confidence-interval.md  theory.md
docs/user-guide/: multiphase_projectile_example.ipynb  outputs.ipynb  running-uqpce.ipynb
reference/: continuous-variables.html  discrete-variables.html  pce.html  reference.html  uqpce-group.html
reference/continuous/: beta.html  epistemic.html  exponential.html  gamma.html  lognormal.html  normal.html  uniform.html  user-input.html
reference/discrete/: epistemic.html  hypergeometric.html  negative-binomial.html  poisson.html  uniform.html  user-input.html
theory/: confidence-interval.html  derivatives.html  openmdao.html  pce.html  sampling.html  symbols-and-defs.html  techniques.html  theory.html  uqpcegroup-overview.html  variables.html
uqpce/: __init__.py
uqpce/mdao/: coeffcomp.py  interface.py  meanplusvarcomp.py  resamplecomp.py  sobolcomp.py  uqpcegroup.py  variancecomp.py
uqpce/pce/: README  _helpers.py  enums.py  error.py  graphs.py  io.py  model.py  pbox.py  pce.py  report.py  utility.py
user-guide/: analysis.html  getting-started.html  inputs.html  multiphase_projectile_example.html  outputs.html  running-uqpce.html  settings.html  variables.html
verification/: confidence-interval.html  limitations.html  pce.html  verification.html
(+51 files in other folders)
