[build-system]
requires = ["hatchling", "numpy>=2.0"]
build-backend = "hatchling.build"

[project]
name = "uqpce"
dynamic = ["version"]
description = "Uncertainty Quantification with Polynomial Chaos Expansion"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "UQPCE Team"},
]
keywords = [
    "uq",
    "uncertainty",
    "uncertainty quantification",
    "design under uncertainty"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
dependencies = [
    "numpy>=2.0",
    "PyYAML",
    "matplotlib",
    "scipy>=1.13",
    "sympy",
    "openmdao>=3.39.0",
    "mpi4py",
    "jax>=0.4.30",
    "dymos"  # Required for example in documentation and corresponding tests
]

[project.optional-dependencies]
all = [
    "uqpce[docs]"
]

docs = [
    "jupyter",
    "jupyter-book>=1.0.3,<2"
]

[project.urls]
Documentation = "https://nasa.github.io/UQPCE/"

[tool.hatch.version]
path = "uqpce/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "uqpce",
]
